GNOME Bugzilla – Bug 672243
Drive by leak fix when code spelunking
Last modified: 2012-03-16 16:47:55 UTC
I was reading through some code for a bug and just happend to noticed this wasn't being freed.
Created attachment 209940 [details] [review] Drive by leak fix when code spelunking _cogl_shader_compile_real spews a warning when shader compilation fails if COGL_GL_DEBUG is defined. This warning is never freed.
Review of attachment 209940 [details] [review]: looks good to me
Thanks for the patch. I've pushed it to master and the cogl-1.8 branch. http://git.gnome.org/browse/cogl/commit/?id=dc00c2724998c422dcd597b87f222553e67f3801 http://git.gnome.org/browse/cogl/commit/?h=cogl-1.8&id=e012d5f06f12ddeed4b4331e159013b6b1859382